# CAU_GlobalFair_exercise

./: CMakeLists.txt  README.md
Advanced/: advanced.c  main.c  revstr.c  subject.md
Beginner/: main.c  subject.md
Sample/: add.c  intermediate.c
Solved/: beginner.c  intermediate.c  revstr.c  very_advanced.c
Very_advanced/: main.c  subject.md  very_advanced.c
